# nrbehave

./: .env  .gitignore  .pre-commit-config.yaml  README.md  behave.ini  pyproject.toml
nrbehave/fixtures/selenium/: environment.py  fixtures.py
nrbehave/selenium-demo/: selenium-demo.py
nrbehave/steps/: csvrunner.py  mydesk.py  selenium.py
nrbehave/steps/demo/: behave.py
nrbehave/utils/virtel/: __init__.py
tests/: behave.ini  config.py  csv_runner.py
tests/_doc/: debug.md  test_install.py
tests/_fixtures/: fixtures.py
tests/_fixtures/selenium/: environment.py
tests/_hooks/: selenium.py
tests/_steps/: __init__.py  common.py  csvrunner.py  mydesk.py  selenium.py
tests/_steps/demo/: behave.py
tests/_utils/: selenium_string_utils.py
tests/_utils/virtel/: __init__.py
tests/data/: FSMH.SRP.WFI121.FFILTRE.csv  subset.csv
tests/features/: environment.py  fixtures.py
tests/features/demo/: behave.feature  français.feature  selenium.feature  tricky.feature
tests/features/mydesk/: devis.auto.feature  fatca.feature  fatca_csv.feature
tests/features/mydesk/multisteps/: mydesk_multi_steps.feature
tests/features/steps/: __init__.py  s1gsi.py
tests/features/steps/project_specific/: s1gsi.py
