[tool.poetry]
name = "nrbehave"
version = "0.1.0"
description = ""
authors = ["d.willems <denis.willems@nrb.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
behave = "^1.2.6"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
