[tool.poetry]
name = "nrbehave"
version = "0.1.0"
description = ""
authors = ["d.willems <denis.willems@nrb.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
behave = { git = "https://github.com/behave/behave", tag = "v1.2.7.dev5" }
selenium = "^4.21.0"
cucumber-tag-expressions = "^6.1.0"
behave-html-pretty-formatter = "^1.11.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
